# voxel-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  vcpkg.json
include/voxel_game/: debug_macros.hpp  reflection_macros.hpp
modules/: CMakeLists.txt
modules/voxel_game/: CMakeLists.txt  voxel_game.ixx
modules/voxel_game/core/: CMakeLists.txt  app.ixx  core.ixx  structs.ixx  window_manager.ixx
modules/voxel_game/core/logic/: CMakeLists.txt  logic.ixx
modules/voxel_game/core/logic/camera/: CMakeLists.txt  camera.ixx  camera_controller.ixx
modules/voxel_game/core/memory/: CMakeLists.txt  gpu_allocator.ixx  memory.ixx  opengl_allocator.ixx
modules/voxel_game/core/rendering/: CMakeLists.txt  camera.ixx  opengl_backend.ixx  rendering.ixx  rendering_backend.ixx  rendering_context.ixx  structs.ixx  window_manager.ixx
modules/voxel_game/core/rendering/meshing/: CMakeLists.txt  mesher.ixx  mesher_implementations.ixx  (+1 more)
modules/voxel_game/core/structs/: structs.ixx
modules/voxel_game/exceptions/: CMakeLists.txt  exceptions.ixx  helpers.ixx
modules/voxel_game/logging/: CMakeLists.txt  logger.ixx  logging.ixx
modules/voxel_game/reflection/: CMakeLists.txt  class_info.ixx  reflection.ixx
modules/voxel_game/typedefs/: CMakeLists.txt  typedefs.ixx
modules/voxel_game/utilities/: CMakeLists.txt  deferred_function.ixx  glm_helpers.ixx  tmp.ixx  utilities.ixx
modules/voxel_game/utilities/memory/: CMakeLists.txt  memory.ixx  smart_ptrs.ixx
modules/voxel_game/utilities/tmp/: CMakeLists.txt  non_type_parameters.ixx  tmp.ixx
src/: CMakeLists.txt  main.cpp
(+2 files in other folders)
